--- a/templates/contact.html
+++ b/templates/contact.html
@@ -67,30 +67,35 @@
           <form class="form-box-style">
             <div class="form-box-style__form-inner">
               <div class="form-box-style__form-input">
-                <h3 class="form-box-style-title">Как вас зовут?</h3>
-                <input class="form-control bg-white" type="text">
+                <h3 class="form-box-style-title">Ваше имя</h3>
+                <input class="form-control bg-white" type="text" placeholder="Ваше имя">
               </div>
               <div class="form-box-style__form-input">
-                <h3 class="form-box-style-title">Как называется компания?</h3>
-                <input class="form-control bg-white" type="text">
+                <h3 class="form-box-style-title">Название компании</h3>
+                <input class="form-control bg-white" type="text" placeholder="Название компании">
               </div>
               <div class="form-box-style__form-input">
-                <h3 class="form-box-style-title">Номер телефона для связи</h3>
-                <input class="form-control bg-white" type="text">
+                <h3 class="form-box-style-title">Ваш телефон</h3>
+                <input class="form-control bg-white" type="text" placeholder="Контакт для связи">
               </div>
               <div class="form-box-style__form-input">
-                <h3 class="form-box-style-title">E-mail для предложений и коммуникации</h3>
-                <input class="form-control bg-white" type="text">
+                <h3 class="form-box-style-title">Ваш Email</h3>
+                <input class="form-control bg-white" type="text" placeholder="Ваш Email">
               </div>
               <div class="form-box-style__form-input">
                 <h3 class="form-box-style-title">Краткие вводные</h3>
                 <textarea class="form-control bg-white textarea"
-                  placeholder=""></textarea>
+                  placeholder="Боль, проблема, задача, запрос, желание, фантазия - если что-то из этого есть, опишите это тут. Если ничего нет или пока не готовы - поставьте  прочерк."></textarea>
+              </div>
+
+              <div class="form-box-style__form-input integrator-checkbox">
+                <input type="checkbox" id="checkbox1" checked>
+                <label for="checkbox1">Нажимая кнопку «Отправить», я принимаю условия пользовательского соглашения и даю согласие на обработку моих персональных данных на условиях и для целей, определённых в <a>Согласии на обработку персональных данных</a></label>
               </div>
             </div>
           </form>
-          <p>Боль, проблема, задача, запрос, желание, фантазия - если что-то из этого есть, опишите это тут. Если ничего нет или пока не готовы - поставьте прочерк.</p>
-          <span>Нажимая кнопку «Отправить», я принимаю условия пользовательского соглашения и даю согласие на обработку моих персональных данных на условиях и для целей, определенных в Согласии на обработку персональных данных. *</span>
+
+
           <div class="form-box-style__form-input-button">
             <button type="submit" class="integrator-btn btn-fill--up w-100">Отправить</button>
           </div>
