--- a/templates/about.html
+++ b/templates/about.html
@@ -159,6 +159,59 @@
   </div>
 </div>
 
+<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    Technologies Section
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
+<div class="integrator-technologies-section" bis_skin_checked="1">
+  <div class="container" bis_skin_checked="1">
+    <h3 class="integrator-technologies-title text-center">Используем проверенные технологии для эффективной работы с Битрикс24. Наши критерии выбора инструментов — безопасность, стабильность и адаптивность под задачи бизнеса.</h3>
+    <div class="integrator-row row--custom" bis_skin_checked="1">
+      <div class="integrator-technologies-item" bis_skin_checked="1">
+          <h4 class="integrator-technologies__title">Программирование</h4>
+          <div class="integrator-technologies-list">
+            <p>python</p>
+            <p>js</p>
+            <p>php</p>
+          </div>
+      </div>
+      <div class="integrator-technologies-item" bis_skin_checked="1">
+          <h4 class="integrator-technologies__title">Базы данных</h4>
+          <div class="integrator-technologies-list">
+            <p>mysql</p>
+            <p>postgres</p>
+            <p>sqlite</p>
+          </div>
+      </div>
+      <div class="integrator-technologies-item" bis_skin_checked="1">
+          <h4 class="integrator-technologies__title">Bi системы</h4>
+          <div class="integrator-technologies-list">
+            <p>powerBI</p>
+            <p>lookerStudio</p>
+          </div>
+      </div>
+      <div class="integrator-technologies-item" bis_skin_checked="1">
+          <h4 class="integrator-technologies__title">Телефония</h4>
+          <div class="integrator-technologies-list">
+            <p>Asterisk</p>
+          </div>
+      </div>
+      <div class="integrator-technologies-item" bis_skin_checked="1">
+          <h4 class="integrator-technologies__title">Фреймворки управления</h4>
+          <div class="integrator-technologies-list">
+            <p>OMIMO</p>
+          </div>
+      </div>
+      <div class="integrator-technologies-item" bis_skin_checked="1">
+          <h4 class="integrator-technologies__title">Управление процессами</h4>
+          <div class="integrator-technologies-list">
+            <p>BPM</p>
+          </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 <div class="about_content-section bg-light-2 section-padding-120">
   <div class="container">
     <div class="row row--custom">
@@ -323,6 +376,8 @@
     </div>
   </div>
 </div>
+
+
 
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~
     Portfolio Section
