feat: add top-block

--- a/templates/about.html
+++ b/templates/about.html
@@ -211,57 +211,88 @@
   </div>
 </div>
 
+<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    TOP Section
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 
-<div class="about_content-section bg-light-2 section-padding-120">
+<div class="integrator-top-section section-padding-120">
   <div class="container">
-    <div class="row row--custom">
-      <div class="col-xxl-6 col-lg-5 col-md-6 col-7">
-        <div class="about_content-image-block">
-          <div class="about_content-image content-image--mobile-width">
-            <img src="{% static '/image/about/video-image.png' %}""
-            alt=" alternative text">
-          </div>
-          <a href="https://www.youtube.com/watch?v=zo9dJFo8H8g" data-fancybox=""
-            class="btn-play absolute-center btn-play">
-            <i class="fa-solid fa-play"></i>
-          </a>
+      <div class="content">
+        <div class="content-text-block">
+          <h2 class="integrator-subheading heading-md text-center">
+            Входим в <span class="primary">ТОП-10</span> интеграторов CRM Битрикс24 в Беларуси
+          </h2>
+          <p class="text-center">
+            Правильные интеграторы — это команда профессионалов, которые помогут вам превратить Битрикс24 в мощный инструмент для развития вашего бизнеса.
+          </p>
         </div>
       </div>
-      <div class="col-xxl-6 col-lg-7 col-md-10 col-auto aos-init aos-animate" data-aos-duration="1000"
-        data-aos="fade-left">
-        <div class="content">
-          <div class="content-text-block">
-            <h2 class="content-title heading-md text-black">
-              Мы в ТОП-5 интеграторов Битрикс24 в Беларуси
-            </h2>
-            <p>
-              Правильные интеграторы – это команда профессионалов, которые
-              помогут вам превратить Битрикс24 в мощный инструмент для развития
-              вашего бизнеса.
-            </p>
-            <div class="content-divider"></div>
+      <div class="integrator-check-points">
+        <div class="integrator-row">
+          <div class="integrator-check-point">
+            <span class="poin-number">
+              01
+            </span>
+            <h4 class="point-title">Высокая квалификация сотрудников</h4>
           </div>
-          <div class="content-testimonial">
-            <div class="content-testimonial__text">
-              <p>
-                «Мы не просто внедряем Битрикс24, мы проводим глубокий
-                бизнес-анализ, вникаем в каждый процесс и создаем решения,
-                которые максимизируют эффективность вашего бизнеса»
-              </p>
-            </div>
-            <div class="content-testimonial__user-metadata">
-              <div class="content-testimonial__user">
-                <img src={% static '/image/about/user-image.png' %} alt="alternative text">
-              </div>
-              <div class="content-testimonial__body">
-                <h4 class="content-testimonial__user-name">Роман Сытько</h4>
-                <span>руководитель компании «Правильные интеграторы»</span>
-              </div>
-            </div>
+          <div class="integrator-check-point">
+            <span class="poin-number">
+              02
+            </span>
+            <h4 class="point-title">Официально подтвержденные компетенции</h4>
+          </div>
+          <div class="integrator-check-point">
+            <span class="poin-number">
+              03
+            </span>
+            <h4 class="point-title">Непрерывное обучение и развитие</h4>
+          </div>
+          <div class="integrator-check-point">
+            <span class="poin-number">
+              04
+            </span>
+            <h4 class="point-title">Участие в бизнес-встречах и конференциях</h4>
           </div>
         </div>
       </div>
-    </div>
+      <div class="integrator-top">
+        <div class="integrator-row">
+            <div class="integrator-top__image">
+              <img src="{% static '/image/about/top.png' %}" alt="Roman">
+            </div>
+            <div class="integrator-top__info">
+              <div class="integrator-top-qoute">
+                <div class="quote-revert">
+                  <img src="{% static '/image/quote.svg' %}" alt="quote">
+                </div>
+                <p class="quote-text">«Мы не просто внедряем Битрикс24, мы проводим глубокий бизнес-анализ, вникаем в каждый процесс и создаем решения, которые максимизируют эффективность вашего бизнеса»</p>
+                <div class="qoute-autor">
+                  <p class="name">Роман Сытько</p>
+                  <p class="business-name">Руководитель компании</p>
+                </div>
+                <div class="quote">
+                  <img src="{% static '/image/quote.svg' %}" alt="quote">
+                </div>
+              </div>
+              <div class="integrator-top__certificats">
+                <div class="integrator-top__certificat">
+                  <img src="{% static '/image/about/cert1.png' %}" alt="certificat">
+                </div>
+                <div class="integrator-top__certificat">
+                  <img src="{% static '/image/about/cert2.png' %}" alt="certificat">
+                </div>
+                <div class="integrator-top__certificat">
+                  <img src="{% static '/image/about/cert3.png' %}" alt="certificat">
+                </div>
+              </div>
+               <div class="integrator-top__certificats-large">
+                <div class="integrator-top__certificat">
+                  <img src="{% static '/image/about/cert4.png' %}" alt="certificat">
+                </div>
+              </div>
+            </div>
+        </div>
+      </div>
   </div>
 </div>
 
