--- a/templates/home.html
+++ b/templates/home.html
@@ -667,7 +667,7 @@
   <div class="container">
     <div class="integrator-cta-base__wrapper">
       <div class="integrator-cta-base__text-block">
-        <h2 class="heading-md">Попробуйте Битрикс24 <span>бесплатно</span>, а мы поможем с внедрением</h2>
+        <h2 class="heading-md">Попробуйте Битрикс24 <span class="primary">бесплатно</span>, а мы поможем с внедрением</h2>
       </div>
       <div class="cta-base__button">
         <a href="#" class="integrator-btn btn-fill--up">
