--- a/bitrixsite/static/css/integrator.css
+++ b/bitrixsite/static/css/integrator.css
@@ -211,6 +211,10 @@
     width: 100%;
 }
 
+span.primary {
+    color: var(--btn-dark-primary) !important;
+}
+
 /*ABOUT*/
 
 .integrator-about {
@@ -327,6 +331,161 @@
     line-height: 1.5;
     color: var(--btn-hover-primary);
     opacity: 0.7; 
+}
+
+/*TOP*/
+
+.integrator-top-section {
+    background-color: var(--bg-fon-gray);
+}
+
+.integrator-top-section .content-text-block {
+    max-width: 1018px;
+    margin: 0 auto;
+}
+
+.integrator-top-section .content-text-block p {
+    font-weight: 400 !important;
+    font-size: 18px !important;
+    line-height: 1.5;
+    color: var(--btn-hover-primary);
+    opacity: 0.7; 
+    margin: 20px auto 0;
+}
+
+.integrator-check-points {
+    margin: 60px 0;
+}
+
+.integrator-check-points .integrator-row {
+    gap: 10px;
+}
+
+.integrator-check-point {
+    padding: 20px 30px;
+    border-radius: 12px;
+    background-color: var(--btn-light-primary);
+    flex: 1;
+}
+
+.poin-number {
+    font-weight: 700 !important;
+    font-size: 60px !important;
+    line-height: 1.2;
+    letter-spacing: -1;
+    color: var(--btn-dark-primary);
+    opacity: 0.05;
+}
+
+.point-title {
+    font-weight: 600 !important;
+    font-size: 18px !important;
+    line-height: 1.5;
+    color: var(--btn-dark-primary);
+    margin-top: 80px;
+}
+
+.integrator-top .integrator-row {
+    gap: 20px;
+}
+
+.integrator-top__image {
+    max-width: 600px;
+    width: 100%;
+    border-radius: 12px;
+    overflow: hidden;
+}
+
+.integrator-top__image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.integrator-top__info {
+    max-width: 679px;
+    width: 100%;
+}
+
+.integrator-top-qoute {
+    padding: 20px;
+    margin-bottom: 20px;
+    border-radius: 12px;
+    background-color: var(--bg-fon-text);
+    overflow: hidden;
+    position: relative;
+}
+
+.quote {
+    position: absolute;
+    bottom: 0;
+    left: auto;
+    right: -2px;
+    z-index: 1;
+}
+
+.quote-revert {
+    position: absolute;
+    transform: rotate(180deg);
+    top: 0;
+    right: auto;
+    left: -2px;
+    z-index: 1;
+}
+
+.quote-text, .qoute-autor {
+    position: relative;
+    z-index: 10;
+}
+
+.quote-text {
+    font-weight: 400 !important;
+    font-size: 18px !important;
+    line-height: 1.5;
+    color: var(--btn-hover-primary);
+    margin-bottom: 20px;
+}
+
+.qoute-autor {
+    padding-left: 20px;
+    border-left: 1px solid var(--btn-hover-primary);
+}
+
+.qoute-autor p {
+    font-weight: 400 !important;
+    font-size: 16px !important;
+    line-height: 1.5;
+    color: var(--btn-hover-primary);
+    opacity: 1;
+}
+
+.qoute-autor p.business-name {
+    opacity: 0.7;
+}
+
+.integrator-top__certificats {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
+}
+
+.integrator-top__certificats-large {
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: space-between;
+}
+
+.integrator-top__certificat {
+    height: 223px;
+    border-radius: 12px;
+    overflow: hidden;
+}
+
+.integrator-top__certificat img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 /*PORTFOLIO*/
@@ -648,6 +807,10 @@
     .integrator-contact__form {
         max-width: 100%;
     }
+
+    .integrator-top__image {
+        max-width: 100%;
+    }
 }
 
 @media screen and (max-width: 768px) {
@@ -658,6 +821,27 @@
     
     .integrator-numbers__image {
         display: none;
+    }
+    
+    .integrator-numbers .integrator-widget-item {
+        padding: 10px;
+    }
+    
+    .integrator-widget-item span {
+        font-size: 30px;
+    }
+
+    .integrator-widget-item p {
+        font-size: 30px;
+    }
+
+    .integrator-numbers .integrator-line  {
+        margin: 15px 0;
+    }
+
+    .integrator-quote {
+        padding-top: 50px;
+        font-size: 18px;
     }
 
     .integrator-technologies__title {
@@ -670,6 +854,18 @@
     }
 
     .integrator-portfolio {
+        grid-template-columns: 1fr;
+    }
+
+    .point-title {
+        margin-top: 20px;
+    }
+
+    .integrator-top__certificats {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .integrator-top__certificats-large {
         grid-template-columns: 1fr;
     }
 }
